@@ -7,16 +7,23 @@ These instructions apply specifically to Ubuntu 10.10 but are very likely to wor
 The following packaged must be installed for lpfw to compile:
 
 libnetfilter-queue-dev
+libnetfilter-conntrack-dev
 libnfnetlink-dev
 libncurses5-dev (to use ncurses frontend)
 optional: zenity(for popup notifications)
 
 Navigate into the source code folder and run "make"
 
-Additionally you may want to compile a module IPC_wrapper.so which is used by python-based graphical frontend. This module is shipped in lpfw_frontend_python_*.tar.bz pre-compiled, so usually there is no need to compile it.
-It requires: libpython2.6 and python2.6-del
+Additionally you may want to compile a module IPC_wrapper.so which is used by python-based graphical frontend. This module is shipped in lpfw_frontend_python_*.tar.bz pre-compiled, so usually there is no need to compile it. But in case you want to:
+It requires: libpython2.6 and python2.6-dev
 Simply issue make ipcwrapper
 
 
 
-Refer to README for instructions on how to use lpfw.
+Refer to README for instructions on how to use lpfw and technical information.
+
+  On some systems after typing "make", you may get a warning similar to the one below:
+  lpfw.c:1230:32: warning: passing argument 2 of ‘nfq_get_payload’ from
+  incompatible pointer type
+  /usr/local/include/libnetfilter_queue/libnetfilter_queue.h:107:12: note: expected ‘unsigned char **’ but argument is of type ‘char **’
+  This warning can be safely ignored.
