@@ -16,7 +16,7 @@ all: lpfw lpfwcli
 lpfw: $(LPFWSOURCES)
 #we link against our own -lnetfiler_conntrack library v. 0.9.1 (0.0.101 is broken)
 #during runtime we search our own directory first for .so files, hence -Wl,-rpath,./
-	gcc $(LPFWSOURCES) $(GCCFLAGS) -lnetfilter_queue -L./libnetfilter_conntrack-0.9.1/src/.libs -lnewnetfilter_conntrack -lpthread -o lpfw -Wl,-rpath,./
+	gcc $(LPFWSOURCES) $(GCCFLAGS) -lnetfilter_queue -lnetfilter_conntrack -lpthread -o lpfw
 
 lpfwcli: lpfwcli.c ipc.c
 	gcc lpfwcli.c ipc.c $(GCCFLAGS) -lncurses -lpthread -o lpfwcli
@@ -30,3 +30,10 @@ ipcwrapper_debug: ipcwrapper
 	
 debug: GCCFLAGS += -g -DDEBUG
 debug: lpfw lpfwcli
+
+
+lpfw2: $(LPFWSOURCES)
+#we link against our own -lnetfiler_conntrack library v. 0.9.1 (0.0.101 is broken)
+#during runtime we search our own directory first for .so files, hence -Wl,-rpath,./
+#UPDATE: no it's not fully broken, sometimes it works, sometimes it doesnt
+	gcc $(LPFWSOURCES) $(GCCFLAGS) -lnetfilter_queue -L/sda/newrepo/libnetfilter_conntrack-0.9.1/src/.libs -lnetfilter_conntrack -lpthread -o lpfw -Wl,-rpath,./
